# flif_windows_plugin

./: .gitignore  CMakeLists.txt  README.md  build_3rdparty.cmd
setup/: definitions.wxi  license.rtf  make_installer.cmd  setup_flif_windows_plugin.wxs
src/: ClassFactory.h  RegistryManager.cpp  RegistryManager.h  dll_interface.cpp  flifBitmapDecoder.cpp  flifBitmapDecoder.h  flifMetadataQueryReader.cpp  flifMetadataQueryReader.h  flifPreviewHandler.cpp  flifPreviewHandler.h  flifPropertyHandler.cpp  flifPropertyHandler.h  flifWrapper.h  flif_windows_plugin.rc  plugin_export.def  plugin_guids.h  plugin_version.h  util.h  window_util.h
src/test/: flif.flif  test.cpp
test/: previewhandler_test.cpp  regression_data.txt  test.cpp
